--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_DATABASE=litbang
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -26,10 +26,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_USERNAME=526f420ea00a9c
+MAIL_PASSWORD=8c3600a3117a94
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=putraansari05@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -37,10 +37,10 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=1525739
+PUSHER_APP_KEY=40ab74c9addd0e520f33
+PUSHER_APP_SECRET=aea159e9d4bdc9a06210
+PUSHER_APP_CLUSTER=ap1
 
 API_PREFIX=api
 API_DEBUG=false
