--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=139.180.153.247
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=dev_litbang
-DB_USERNAME=btx
-DB_PASSWORD=C3l3b35*123
+DB_DATABASE=litbang
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
