--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,10 @@
         "laravel/passport": "7.5.1",
         "laravel/tinker": "^2.0",
         "nyholm/psr7": "^1.4",
+        "pusher/pusher-php-server": "~3.0",
         "shetabit/visitor": "^3.1",
         "spatie/laravel-activitylog": "^3.14",
+        "twilio/sdk": "^6.43",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
